--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link 
-      rel="stylesheet" 
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-    <style>
-      .jumbotron {
-        background-color: #e6ffe6;
-        text-align: center;
-      }
-    </style>
-  </head>
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-  <body>
-    <div id="elm-app-is-loaded-here"></div>
+  <style>
+    .jumbotron {
+      background-color: #e6ffe6;
+      text-align: center;
+    }
+  </style>
+</head>
 
-    
-    <script src="elm.js"></script>
-    <script>
+<body>
+  <div id="elm-app-is-loaded-here"></div>
+
+
+  <script src="elm.js"></script>
+  <script>
+    if (screen.width <= 950) {
+      var app = Elm.Mobile.init({
+        node: document.getElementById("elm-app-is-loaded-here")
+      });
+    } else {
       var app = Elm.Main.init({
         node: document.getElementById("elm-app-is-loaded-here")
-      });      
-    </script>
-  </body>
+      });
+    } 
+  </script>
+</body>
+
 </html>
