--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 
   <script src="elm.js"></script>
+  <script src="elm_mobile.js"></script>
   <script>
     if (screen.width <= 950) {
       var app = Elm.Mobile.init({
